allow method